[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/Enemies/Goblins/ShockwaveGoblin/Shockwave.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/Goblins/Goblin.gd" type="Script" id=2]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/DamageManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Effects/Blood/Blood.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 194.01

[node name="Goblin" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )
accel = 14.0
speed = 300.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="DamageManager" parent="." instance=ExtResource( 5 )]
maxHealth = 900
isUnderwater = true
spritePath = NodePath("../Sprite")
deathParticles = ExtResource( 6 )

[node name="Attack" type="Node2D" parent="."]

[node name="Collisions" type="Node2D" parent="."]

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 2 )

[node name="Hurtbox" parent="Collisions" instance=ExtResource( 4 )]
collision_layer = 4

[node name="Wall" type="RayCast2D" parent="Collisions"]
enabled = true

[node name="Timers" type="Node" parent="."]

[node name="TargetPos" type="Timer" parent="Timers"]
wait_time = 1.2
autostart = true

[node name="StateChange" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="hurt" from="Collisions/Hurtbox" to="DamageManager" method="take_damage"]
[connection signal="timeout" from="Timers/TargetPos" to="." method="get_target"]
[connection signal="timeout" from="Timers/StateChange" to="." method="toggle_state"]

[editable path="Collisions/PlayerDetection"]
[editable path="Collisions/Hurtbox"]
